--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Operadores aritmeticos <br> Por: Marshall </h1>
+    <h1> Operadores logicos <br> Por: Marshall </h1>
 </body>
 </html>
